2004-03-22 15:25  Christos Zoulas  <christos@zoulas.com>

	* Lots of mime fixes
	  (Joerg Ostertag) <ostertag@rechengilde.de>

	* FreeBSD ELF version handling
	  (Edwin Groothuis) <edwin@mavetju.org>

	* correct cleanup in all cases; don't just close the file.
	  (Christos Zoulas) <christos@zoulas.com>

	* add gettext message catalogue support
	  (Michael Piefel) <piefel@debian.org>

	* better printout for unreadable files
	  (Michael Piefel) <piefel@debian.org>

	* compensate for missing MAXPATHLEN
	  (Michael Piefel) <piefel@debian.org>

	* add wide character string length computation
	  (Michael Piefel) <piefel@debian.org>

	* Avoid infinite loops caused by bad elf alignments
	  or name and description note sizes. Reported by
	  (Mikael Magnusson) <mmikael@comhem.se>

2004-03-09 13:55  Christos Zoulas  <christos@zoulas.com>

	* Fix possible memory leak on error and add missing regfree
	  (Dmitry V. Levin) <ldv@altlinux.org>

2003-12-23 12:12  Christos Zoulas  <christos@zoulas.com>

	* fix -k flag (Maciej W. Rozycki)

2003-11-18 14:10  Christos Zoulas  <christos@zoulas.com>

	* Try to give us much info as possible on corrupt elf files.
	  (Willy Tarreau) <willy@w.ods.org>
	* Updated python bindings (Brett Funderburg)
	   <brettf@deepfile.com>

2003-11-11 15:03  Christos Zoulas  <christos@zoulas.com>

	* Include file.h first, because it includes config.h
	  breaks largefile test macros otherwise.
	  (Paul Eggert <eggert@CS.UCLA.EDU> via
	   Lars Hecking <lhecking@nmrc.ie>)

2003-10-14 21:39  Christos Zoulas  <christos@zoulas.com>

	* Python bindings (Brett Funderburg) <brettf@deepfile.com>
	* Don't lookup past the end of the buffer
	  (Chad Hanson) <chanson@tcs-sec.com>
	* Add MAGIC_ERROR and api on magic_errno()

2003-10-08 12:40  Christos Zoulas  <christos@zoulas.com>

	* handle error conditions from compile as fatal
	  (Antti Kantee) <pooka@netbsd.org>
	* handle magic filename parsing sanely
	* more magic fixes.